--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="carousel-sporrt_text ">
                               <h1 class="sporrt_text">Best sports item shop our</h1>
-                              <p  class="lorem_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected randomised words which don't look even slightly believableThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected randomised words which don't look even slightly believable</p>
+                              <p  class="lorem_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffer alteration in some form, by injected randomised words which don't look even slightly believableThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected randomised words which don't look even slightly believable</p>
                               <div class="btn_main">
                                  <a class="btn btn-lg btn-primary" href="#" role="button">Read More</a>
                               </div>
